--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tosspayments/payment-widget-sdk": "^0.9.3",
+    "@types/dotenv": "^8.2.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.50",
     "@types/react": "^18.2.21",
@@ -16,6 +17,7 @@
     "@types/react-redux": "^7.1.26",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.0",
+    "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
     "moment": "^2.29.4",
     "node-sass": "^9.0.0",
@@ -30,7 +32,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3001 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
