--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-redux": "^7.1.26",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.0",
+    "classnames": "^2.3.2",
     "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
     "moment": "^2.29.4",
