--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.8.4",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/joy": "^5.0.0-beta.11",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -18,12 +21,15 @@
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
+    "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
     "moment": "^2.29.4",
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-icons": "^4.11.0",
@@ -60,6 +66,8 @@
     ]
   },
   "devDependencies": {
-    "@types/moment": "^2.13.0"
+    "@types/date-fns": "^2.6.0",
+    "@types/moment": "^2.13.0",
+    "@types/react-datepicker": "^4.19.0"
   }
 }
