--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "scss": "^0.2.4",
+    "socket.io-client": "^4.7.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -70,6 +71,7 @@
   "devDependencies": {
     "@types/date-fns": "^2.6.0",
     "@types/moment": "^2.13.0",
-    "@types/react-datepicker": "^4.19.0"
+    "@types/react-datepicker": "^4.19.0",
+    "@types/socket.io-client": "^3.0.0"
   }
 }
