--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.8.4",
+    "@apollo/client": "^3.8.6",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/joy": "^5.0.0-beta.11",
@@ -67,6 +67,8 @@
     ]
   },
   "devDependencies": {
+    "@types/classnames": "^2.3.1",
+    "@types/react-icons": "^3.0.0",
     "@types/socket.io-client": "^3.0.0"
   }
 }
