--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.9.0",
     "scss": "^0.2.4",
     "socket.io-client": "^4.7.2",
     "typescript": "^4.9.5",
