--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "scss": "^0.2.4",
     "socket.io-client": "^4.7.2",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zustand": "^4.4.5"
   },
   "scripts": {
     "start": "set PORT=3001 && react-scripts start",
