--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "scss": "^0.2.4",
     "socket.io-client": "^4.7.2",
     "typescript": "^4.9.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
     "zustand": "^4.4.5"
   },
@@ -71,6 +72,7 @@
   "devDependencies": {
     "@types/classnames": "^2.3.1",
     "@types/react-icons": "^3.0.0",
-    "@types/socket.io-client": "^3.0.0"
+    "@types/socket.io-client": "^3.0.0",
+    "@types/uuid": "^9.0.6"
   }
 }
