--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
-    "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
@@ -38,6 +37,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
     "recharts": "^2.9.0",
+    "sass": "^1.69.5",
     "scss": "^0.2.4",
     "socket.io-client": "^4.7.2",
     "typescript": "^4.9.5",
@@ -71,8 +71,6 @@
   },
   "devDependencies": {
     "@types/classnames": "^2.3.1",
-    "@types/react-icons": "^3.0.0",
-    "@types/socket.io-client": "^3.0.0",
     "@types/uuid": "^9.0.6"
   }
 }
