--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.3.1",
     "graphql": "^16.8.1",
+    "kbr-validator": "^0.0.13",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
