--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,10 @@
   "printWidth": 120,
   "trailingComma": "es5",
   "arrowParens": "always",
-  "jsxSingleQuote": false
+  "jsxSingleQuote": false,
+  "compilerOptions": {
+    "target": "ESNext",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "types": ["vite/client", "vite-plugin-svgr/client"]
+  }
 }
