--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "sass": "^1.69.5",
     "scss": "^0.2.4",
     "socket.io-client": "^4.7.2",
+    "terser": "^5.24.0",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4",
     "zustand": "^4.4.5"
