--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,13 @@ yarn-error.log*
 
 # Sentry Config File
 .sentryclirc
+
+# yarn berry zero install
+.pnp.*
+.yarn/*
+!.yarn/cache
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
