--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/joy": "^5.0.0-beta.11",
     "@mui/material": "^5.14.14",
+    "@mui/system": "^5.14.18",
     "@mui/x-date-pickers": "^6.16.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@sentry/cli": "^2.21.5",
@@ -69,5 +70,6 @@
     "vite": "^5.0.0",
     "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^4.2.1"
-  }
+  },
+  "packageManager": "yarn@4.0.2"
 }
