--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,8 @@ yarn-error.log*
 .sentryclirc
 
 # yarn berry zero install
-.pnp.*
+.pnp.cjs
+.pnp.loader.mjs
 .yarn/*
 !.yarn/cache
 !.yarn/patches
