--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@mui/system": "^5.14.18",
     "@mui/x-date-pickers": "^6.16.3",
     "@reduxjs/toolkit": "^1.9.5",
-    "@sentry/cli": "^2.21.5",
+    "@sentry/cli": "^2.22.2",
     "@sentry/react": "^7.80.1",
     "@sentry/tracing": "^7.80.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -49,7 +49,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && yarn sentry:sourcemaps && yarn sentry:sourcemaps",
     "serve": "vite preview",
     "sentry:sourcemaps": "sentry-cli sourcemaps inject --org efdb1838adbc --project javascript-react ./dist && sentry-cli sourcemaps upload --org efdb1838adbc --project javascript-react ./dist"
   },
