--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@sentry/cli": "^2.22.2",
     "@sentry/react": "^7.80.1",
     "@sentry/tracing": "^7.80.1",
-    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tosspayments/payment-widget-sdk": "^0.9.3",
@@ -36,7 +35,7 @@
     "react-icons": "^4.11.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.1.2",
-    "react-router-dom": "^6.16.0",
+    "react-router-dom": "^6.20.0",
     "react-toastify": "^9.1.3",
     "recharts": "^2.9.0",
     "sass": "^1.69.5",
@@ -49,11 +48,12 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && yarn sentry:sourcemaps && yarn sentry:sourcemaps",
+    "build": "tsc && vite build",
     "serve": "vite preview",
     "sentry:sourcemaps": "sentry-cli sourcemaps inject --org efdb1838adbc --project javascript-react ./dist && sentry-cli sourcemaps upload --org efdb1838adbc --project javascript-react ./dist"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.4",
     "@types/classnames": "^2.3.1",
     "@types/node": "^20.9.2",
     "@types/react": "^18.2.37",
@@ -66,7 +66,7 @@
     "eslint": "^8.53.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "typescript": "^5.2.2",
+    "typescript": "^5.3.2",
     "vite": "^5.0.0",
     "vite-plugin-svgr": "^4.2.0",
     "vite-tsconfig-paths": "^4.2.1"
