--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen       8080;
-    server_name  localhost;
+    server_name  a.click-soft.shop t.click-soft.shop;
 
     #access_log  /var/log/nginx/host.access.log  main;
 
