--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@sentry/cli": "^2.22.2",
     "@sentry/react": "^7.80.1",
     "@sentry/tracing": "^7.80.1",
+    "@sentry/vite-plugin": "^2.10.1",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tosspayments/payment-widget-sdk": "^0.9.3",
