--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,11 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "sourceMap": true,
+
+    // "paths": {
+    //   "@/*": ["./src/*"]
+    // }
   },
-  "include": ["src", "jest.config.ts"]
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
