--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "@mui/x-date-pickers": "^6.16.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@sentry/cli": "^2.22.2",
-    "@sentry/react": "^7.80.1",
+    "@sentry/react": "^7.83.0",
     "@sentry/tracing": "^7.80.1",
-    "@sentry/vite-plugin": "^2.10.1",
+    "@sentry/vite-plugin": "^2.10.2",
+    "@tanstack/react-query": "^5.10.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tosspayments/payment-widget-sdk": "^0.9.3",
@@ -34,7 +35,6 @@
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
     "react-icons": "^4.11.0",
-    "react-query": "^3.39.3",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.20.0",
     "react-toastify": "^9.1.3",
